fix z-index

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -321,6 +321,7 @@ ul {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    z-index: -100;
 } 
 
 .canvas {
